# kedip

./: AGENTS.md  LICENSE  README.md  package.json
.github/workflows/: release.yml  windows-build.yml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  timer.rs  tray.rs  windows.rs
apps/desktop/src/constants/: copy.ts
apps/desktop/src/lib/: format.ts  index.ts
apps/desktop/src/types/: index.ts  timer.ts
apps/web/: index.html  package.json
apps/web/public/: demo.webm
apps/web/src/: App.tsx  index.css
src/: App.tsx  index.css
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  state.rs  timer.rs  tray.rs  windows.rs
src/components/ui/: Toggle.tsx  blob.tsx  button.tsx  card.tsx  index.ts  slider.tsx
src/components/windows/: BreakWindow.tsx  NotificationWindow.tsx  SettingsWindow.tsx  index.ts
src/components/windows/NotificationWindow/: NotificationBanner.tsx  NotificationWindow.tsx
src/components/windows/OnboardingWindow/: OnboardingWindow.tsx  index.ts
src/components/windows/SettingsWindow/: SettingsWindow.tsx  StatusCard.tsx  TimerSettings.tsx  index.ts
src/constants/: presets.ts
src/hooks/: index.ts  use-escape-skip.ts  use-timer.ts  use-zen-mode.ts
src/lib/: format.ts  index.ts
src/types/: index.ts  timer.ts
(+26 files in other folders)
